# Revrag_voice_AI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/revrag_voice_ai/: __init__.py  agent.py  main.py
